fix:增加自定义类加载器排除特定包加载